deploy: 8d9c46007ff75395e9b17d9dd2ad6f8d4f62f069

--- a/meals/index.html
+++ b/meals/index.html
@@ -14,7 +14,7 @@
 
 
 
-<link rel="stylesheet" href="../scss/main.min.ed3d0df39ceb7191c7f41b5585c384a7f9efdf75b7a4002a04cb2c161dcbc62b.css">
+<link rel="stylesheet" href="../scss/main.min.9bf80a42af22f3656abfa055a7429e13b8327ea6239e67de828cf5d5f2c3afe5.css">
 
     <title>Browsing all meals</title>
   </head>
@@ -37,7 +37,7 @@
       </div>
 
       <div class="collapse navbar-collapse d-lg-flex" id="navbarSupportedContent">
-        <a class="navbar-brand flex-fill" href="../">
+        <a class="navbar-brand flex-fill" href="../" title="Back to Home">
           
           <img
             src="../img/cookbook-horizontal.svg"
@@ -77,7 +77,7 @@
             type="search"
             placeholder="Search recipes"
             aria-label="Search">
-          <button class="btn btn-secondary btn-outline-success" type="submit">
+          <button class="btn btn-secondary" type="submit">
             Search
           </button>
         </form>
