--- a/recipes/index.html
+++ b/recipes/index.html
@@ -13,7 +13,7 @@
 
 
 
-<link rel="stylesheet" href="../scss/main.min.ed3d0df39ceb7191c7f41b5585c384a7f9efdf75b7a4002a04cb2c161dcbc62b.css">
+<link rel="stylesheet" href="../scss/main.min.9bf80a42af22f3656abfa055a7429e13b8327ea6239e67de828cf5d5f2c3afe5.css">
 
     <title>CompSoc Cookbook</title>
   </head>
@@ -36,7 +36,7 @@
       </div>
 
       <div class="collapse navbar-collapse d-lg-flex" id="navbarSupportedContent">
-        <a class="navbar-brand flex-fill" href="../">
+        <a class="navbar-brand flex-fill" href="../" title="Back to Home">
           
           <img
             src="../img/cookbook-horizontal.svg"
@@ -350,6 +350,6 @@
 <script type="text/javascript" src="../bootstrap/js/dist/collapse.js"></script>
 
     
-    <script async src="../js/search.min.4fc32724bd16a15b8dca8d48299f53a2962e2a9a90ff15e78768ecbd5b4ed2ef.js"></script>
+    <script async src="../js/search.min.89102a744dc6d61b73b452f538a0f22d74ddbb37267369fd66eee75027c0dbb7.js"></script>
   </body>
 </html>
