--- a/meals/desserts/index.html
+++ b/meals/desserts/index.html
@@ -13,7 +13,7 @@
 
 
 
-<link rel="stylesheet" href="../../scss/main.min.ed3d0df39ceb7191c7f41b5585c384a7f9efdf75b7a4002a04cb2c161dcbc62b.css">
+<link rel="stylesheet" href="../../scss/main.min.9bf80a42af22f3656abfa055a7429e13b8327ea6239e67de828cf5d5f2c3afe5.css">
 
     <title>Browsing all desserts dishes | CompSoc Cookbook</title>
   </head>
@@ -36,7 +36,7 @@
       </div>
 
       <div class="collapse navbar-collapse d-lg-flex" id="navbarSupportedContent">
-        <a class="navbar-brand flex-fill" href="../../">
+        <a class="navbar-brand flex-fill" href="../../" title="Back to Home">
           
           <img
             src="../../img/cookbook-horizontal.svg"
@@ -76,7 +76,7 @@
             type="search"
             placeholder="Search recipes"
             aria-label="Search">
-          <button class="btn btn-secondary btn-outline-success" type="submit">
+          <button class="btn btn-secondary" type="submit">
             Search
           </button>
         </form>
@@ -89,7 +89,10 @@
 
       <main>
         <h1 class="display-2 text-center">Desserts</h1>
-        <h4 class="text-center mb-5">List of desserts.</h4>
+        
+        <div class="text-center mb-5">
+          <a class="btn btn-outline-primary" href="../../recipes?meals=desserts">Search with this filter</a>
+        </div>
         <ol class="recipe-listing row row-cols-2 row-cols-lg-4 g-4">
   
 
@@ -119,9 +122,7 @@
     </li>
   
 </ol>
-<div class="d-flex justify-content-center mt-5">
-  
-</div>
+
 
       </main>
       <footer>
